--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="product.html">Features</a></li>
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="solutions.html">Solutions</a></li>
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="pricing.html">Pricing</a></li>
-<li><a class="hover:text-[var(--primary-color)] transition-colors" href="resources.html">Updates</a></li>
+<li><a class="hover:text-[var(--primary-color)] transition-colors" href="blog.html">Updates</a></li>
 </ul>
 </div>
 <div>
