--- a/signup.html
+++ b/signup.html
@@ -17,43 +17,56 @@
     <link rel="stylesheet" href="global.css">
 
 </head>
-<body class="bg-gray-50 text-[var(--text-primary-color)]">
-<div class="flex min-h-screen flex-col items-center justify-center px-4 py-12">
-    <div class="w-full max-w-md">
-        <div class="mb-8 text-center">
-            <a class="flex items-center justify-center gap-3 text-3xl font-bold tracking-tight" href="index.html">
-                <svg class="h-10 w-10 text-[var(--primary-color)]" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M36.7273 44C33.9891 44 31.6043 39.8386 30.3636 33.69C29.123 39.8386 26.7382 44 24 44C21.2618 44 18.877 39.8386 17.6364 33.69C16.3957 39.8386 14.0109 44 11.2727 44C7.25611 44 4 35.0457 4 24C4 12.9543 7.25611 4 11.2727 4C14.0109 4 16.3957 8.16144 17.6364 14.31C18.877 8.16144 21.2618 4 24 4C26.7382 4 29.123 8.16144 30.3636 14.31C31.6043 8.16144 33.9891 4 36.7273 4C40.7439 4 44 12.9543 44 24C44 35.0457 40.7439 44 36.7273 44Z" fill="currentColor"></path></svg>
-                <span>Ekobol</span>
-            </a>
-            <h1 class="mt-6 text-2xl font-bold tracking-tight md:text-3xl">Create your account</h1>
-            <p class="mt-2 text-[var(--text-secondary-color)]">Join us and start building your e-commerce future.</p>
+<body class="bg-[var(--background-color)] text-[var(--text-primary-color)]">
+<div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
+<div class="layout-container flex h-full grow flex-col">
+
+    <!-- Header will be loaded here by JavaScript -->
+    <div id="header-placeholder"></div>
+
+    <!-- Main Content -->
+    <main class="flex-1 flex items-center justify-center px-4 py-16 lg:py-24 bg-gray-50">
+        <div class="w-full max-w-md">
+            <div class="mb-8 text-center">
+                <h1 class="text-3xl font-bold tracking-tight md:text-4xl">Create Your Account</h1>
+                <p class="mt-2 text-[var(--text-secondary-color)]">Join us and start building your e-commerce future.</p>
+            </div>
+            <div class="rounded-lg border border-[var(--divider-color)] bg-[var(--background-color)] p-8 shadow-sm">
+                <form class="space-y-6">
+                     <div>
+                        <label class="text-sm font-medium" for="fullname">Full Name</label>
+                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="fullname" name="fullname" required="" type="text" placeholder="e.g. Ayşe Yılmaz"/>
+                    </div>
+                    <div>
+                        <label class="text-sm font-medium" for="email">Email address</label>
+                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="email" name="email" required="" type="email" placeholder="you@example.com"/>
+                    </div>
+                    <div>
+                        <label class="text-sm font-medium" for="password">Password</label>
+                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="password" name="password" required="" type="password" placeholder="Create a strong password"/>
+                    </div>
+                    <div class="pt-2">
+                        <button class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" type="submit">
+                            Create Account
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <p class="mt-8 text-center text-sm text-[var(--text-secondary-color)]">
+                Already have an account?
+                <a class="font-medium text-[var(--primary-color)] hover:underline" href="login.html">Log in</a>
+            </p>
         </div>
-        <div class="rounded-lg border border-[var(--divider-color)] bg-[var(--background-color)] p-8 shadow-sm">
-            <form class="space-y-6">
-                 <div>
-                    <label class="text-sm font-medium" for="fullname">Full Name</label>
-                    <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="fullname" name="fullname" required="" type="text" placeholder="e.g. Ayşe Yılmaz"/>
-                </div>
-                <div>
-                    <label class="text-sm font-medium" for="email">Email address</label>
-                    <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="email" name="email" required="" type="email" placeholder="you@example.com"/>
-                </div>
-                <div>
-                    <label class="text-sm font-medium" for="password">Password</label>
-                    <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="password" name="password" required="" type="password" placeholder="Create a strong password"/>
-                </div>
-                <div class="pt-2">
-                    <button class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" type="submit">
-                        Create Account
-                    </button>
-                </div>
-            </form>
-        </div>
-        <p class="mt-8 text-center text-sm text-[var(--text-secondary-color)]">
-            Already have an account?
-            <a class="font-medium text-[var(--primary-color)] hover:underline" href="login.html">Log in</a>
-        </p>
-    </div>
+    </main>
+
+    <!-- Footer will be loaded here by JavaScript -->
+    <div id="footer-placeholder"></div>
+
 </div>
+</div>
+
+<!-- Load our app script at the end of the body -->
+<script src="app.js"></script>
+
 </body>
 </html>
