--- a/index_en.html
+++ b/index_en.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Ekobol - Yapay Zeka Destekli E-ticaret Platformu</title>
+    <title>Ekobol - The AI-Powered E-commerce Platform</title>
     
     <!-- Fonts -->
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
@@ -29,18 +29,18 @@
         <section class="px-4 sm:px-10 lg:px-20 py-20 lg:py-32 text-center">
             <div class="max-w-5xl mx-auto">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tighter leading-tight mb-6">
-                  Hepsi Bir Arada E-ticaret Platformu, <br class="hidden sm:inline"/>
-                  <span class="text-[var(--primary-color)]">Yapay Zeka</span> ile Güçlendirildi
+                  The All-in-One E-commerce Platform, <br class="hidden sm:inline"/>
+                  Supercharged by <span class="text-[var(--primary-color)]">Artificial Intelligence</span>
                 </h1>
                 <p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-3xl mx-auto mb-8">
-                  Yapay zeka destekli listelemeler ve gerçek zamanlı çoklu pazar yeri senkronizasyonundan, tamamen yönetilen marka inşasına kadar, Ekobol dijital büyümeniz için nihai ortağınızdır.
+                  From AI-powered listings and real-time multi-marketplace sync to fully managed brand building, Ekobol is the ultimate partner for your digital growth.
                 </p>
                 <div class="flex justify-center gap-4">
-                    <a class="flex min-w-[160px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="signup.html">
-                        <span class="truncate">Ücretsiz Başla</span>
+                    <a class="flex min-w-[160px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="signup_en.html">
+                        <span class="truncate">Get Started Free</span>
                     </a>
-                    <a class="flex min-w-[160px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-white border-2 border-[var(--divider-color)] text-[var(--text-primary-color)] text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="solutions.html">
-                        <span class="truncate">Çözümleri Keşfet</span>
+                    <a class="flex min-w-[160px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-white border-2 border-[var(--divider-color)] text-[var(--text-primary-color)] text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="solutions_en.html">
+                        <span class="truncate">Explore Solutions</span>
                     </a>
                 </div>
             </div>
@@ -50,25 +50,25 @@
         <section class="px-4 sm:px-10 lg:px-20 py-16 lg:py-24 bg-gray-50">
             <div class="max-w-6xl mx-auto">
                 <div class="text-center mb-16">
-                     <h2 class="text-3xl md:text-4xl font-bold tracking-tight">E-ticaret Yolculuğunuz Artık Çok Kolay</h2>
-                     <p class="text-lg text-[var(--text-secondary-color)] mt-4">Üç basit adımda başlayın.</p>
+                     <h2 class="text-3xl md:text-4xl font-bold tracking-tight">Your E-commerce Journey, Streamlined</h2>
+                     <p class="text-lg text-[var(--text-secondary-color)] mt-4">Get started in three simple steps.</p>
                 </div>
                 <div class="relative grid md:grid-cols-3 gap-12">
                     <div class="absolute top-1/2 left-0 w-full h-1 bg-[var(--divider-color)] -translate-y-1/2 -z-10 hidden md:block"></div>
                     <div class="relative flex flex-col items-center text-center">
                         <div class="relative mb-6 flex items-center justify-center size-16 rounded-full bg-[var(--primary-color)] text-white shadow-lg"><span class="text-2xl font-bold">1</span></div>
-                        <h3 class="text-xl font-bold mb-3">Bağlan & Yapılandır</h3>
-                        <p class="text-[var(--text-secondary-color)]">Trendyol, Etsy ve Amazon gibi pazar yerlerinizi sorunsuzca entegre edin. Sezgisel araçlarımızla tercihlerinizi ayarlayın.</p>
+                        <h3 class="text-xl font-bold mb-3">Connect & Configure</h3>
+                        <p class="text-[var(--text-secondary-color)]">Seamlessly integrate your marketplaces like Trendyol, Etsy, and Amazon. Set up your preferences with our intuitive tools.</p>
                     </div>
                     <div class="relative flex flex-col items-center text-center">
                         <div class="relative mb-6 flex items-center justify-center size-16 rounded-full bg-[var(--primary-color)] text-white shadow-lg"><span class="text-2xl font-bold">2</span></div>
-                        <h3 class="text-xl font-bold mb-3">Yapay Zeka Araçlarından Güç Al</h3>
-                        <p class="text-[var(--text-secondary-color)]">Görüntü oluşturmak, açıklamalar yazmak, fiyatlandırmayı optimize etmek ve tüm kanallarda envanteri otomatikleştirmek için YZ paketimizden yararlanın.</p>
+                        <h3 class="text-xl font-bold mb-3">Leverage AI-Powered Tools</h3>
+                        <p class="text-[var(--text-secondary-color)]">Harness our AI suite to generate images, write descriptions, optimize pricing, and automate inventory across all channels.</p>
                     </div>
                     <div class="relative flex flex-col items-center text-center">
                         <div class="relative mb-6 flex items-center justify-center size-16 rounded-full bg-[var(--primary-color)] text-white shadow-lg"><span class="text-2xl font-bold">3</span></div>
-                        <h3 class="text-xl font-bold mb-3">Analiz Et, Uyum Sağla & Büyü</h3>
-                        <p class="text-[var(--text-secondary-color)]">Tüm işinizi tek bir birleşik kontrol panelinden izleyin. Akıllı kararlar vermek ve güvenle büyümek için gerçek zamanlı verileri kullanın.</p>
+                        <h3 class="text-xl font-bold mb-3">Analyze, Adapt, & Thrive</h3>
+                        <p class="text-[var(--text-secondary-color)]">Monitor your entire business from a unified dashboard. Use real-time data to make smart decisions and scale with confidence.</p>
                     </div>
                 </div>
             </div>
@@ -78,25 +78,25 @@
         <section class="px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
              <div class="max-w-7xl mx-auto">
                 <div class="text-center mb-16">
-                     <h2 class="text-3xl md:text-4xl font-bold tracking-tight">Ekobol Farkını Yaşayın</h2>
-                     <p class="text-lg text-[var(--text-secondary-color)] mt-4">Bu sadece başka bir entegratör değil. Bu sizin yapay zeka yardımcı pilotunuz.</p>
+                     <h2 class="text-3xl md:text-4xl font-bold tracking-tight">Experience the Ekobol Difference</h2>
+                     <p class="text-lg text-[var(--text-secondary-color)] mt-4">This isn't just another integrator. This is your AI co-pilot.</p>
                 </div>
                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="p-6 text-center">
                         <div class="flex justify-center mb-4"><svg class="h-10 w-10 text-[var(--primary-color)]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 01-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 013.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 013.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 01-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.553L16.5 21.75l-.398-1.197a3.375 3.375 0 00-2.456-2.456L12.75 18l1.197-.398a3.375 3.375 0 002.456-2.456L16.5 14.25l.398 1.197a3.375 3.375 0 002.456 2.456L20.25 18l-1.197.398a3.375 3.375 0 00-2.456 2.456z" /></svg></div>
-                        <h3 class="text-xl font-bold mb-2">YZ Görüntü Stüdyosu</h3><p class="text-[var(--text-secondary-color)]">Basit yüklemelerden çarpıcı, profesyonel ürün fotoğrafları oluşturun. Fotoğrafçıya gerek yok.</p>
+                        <h3 class="text-xl font-bold mb-2">AI Image Studio</h3><p class="text-[var(--text-secondary-color)]">Generate stunning, professional product photos from simple uploads. No photographer needed.</p>
                     </div>
                      <div class="p-6 text-center">
                         <div class="flex justify-center mb-4"><svg class="h-10 w-10 text-[var(--primary-color)]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" /></svg></div>
-                        <h3 class="text-xl font-bold mb-2">Akıllı Açıklamalar</h3><p class="text-[var(--text-secondary-color)]">Her pazar yeri için saniyeler içinde ilgi çekici, SEO dostu ürün açıklamaları ve başlıkları oluşturun.</p>
+                        <h3 class="text-xl font-bold mb-2">Smart Descriptions</h3><p class="text-[var(--text-secondary-color)]">Create compelling, SEO-friendly product descriptions and titles in seconds for any marketplace.</p>
                     </div>
                      <div class="p-6 text-center">
                         <div class="flex justify-center mb-4"><svg class="h-10 w-10 text-[var(--primary-color)]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M7.5 21L3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5" /></svg></div>
-                        <h3 class="text-xl font-bold mb-2">Gerçek Zamanlı Senkronizasyon</h3><p class="text-[var(--text-secondary-color)]">Fiyatınızı veya stoğunuzu bir kez güncelleyin ve anında her yerde yansımasını görün. Artık manuel güncelleme yok.</p>
+                        <h3 class="text-xl font-bold mb-2">Real-Time Sync</h3><p class="text-[var(--text-secondary-color)]">Update your price or stock once, and see it reflected everywhere instantly. No more manual updates.</p>
                     </div>
                      <div class="p-6 text-center">
                         <div class="flex justify-center mb-4"><svg class="h-10 w-10 text-[var(--primary-color)]" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 016 3.75h2.25A2.25 2.25 0 0110.5 6v2.25a2.25 2.25 0 01-2.25 2.25H6a2.25 2.25 0 01-2.25-2.25V6zM3.75 15.75A2.25 2.25 0 016 13.5h2.25a2.25 2.25 0 012.25 2.25V18a2.25 2.25 0 01-2.25 2.25H6A2.25 2.25 0 013.75 18v-2.25zM13.5 6a2.25 2.25 0 012.25-2.25H18A2.25 2.25 0 0120.25 6v2.25A2.25 2.25 0 0118 10.5h-2.25a2.25 2.25 0 01-2.25-2.25V6zM13.5 15.75a2.25 2.25 0 012.25-2.25H18a2.25 2.25 0 012.25 2.25V18A2.25 2.25 0 0118 20.25h-2.25A2.25 2.25 0 0113.5 18v-2.25z" /></svg></div>
-                        <h3 class="text-xl font-bold mb-2">Birleşik Kontrol Paneli</h3><p class="text-[var(--text-secondary-color)]">Tüm kanallardaki satışları, siparişleri ve envanteri tek bir merkezi, kullanımı kolay merkezden takip edin.</p>
+                        <h3 class="text-xl font-bold mb-2">Unified Dashboard</h3><p class="text-[var(--text-secondary-color)]">Track sales, orders, and inventory across all channels from one central, easy-to-use hub.</p>
                     </div>
                 </div>
             </div>
@@ -106,22 +106,22 @@
         <section class="px-4 sm:px-10 lg:px-20 py-16 lg:py-24 bg-gray-50">
             <div class="max-w-3xl mx-auto text-center">
                 <blockquote class="text-2xl md:text-3xl font-medium leading-snug">
-                    “Partner Planı ile kelimenin tam anlamıyla sadece harika ürünler yapmaya odaklanıyoruz. Ekobol markamızı sıfırdan kurdu ve online satışlarımız üçe katlandı. Sanki bizim için çalışan koca bir dijital pazarlama ajansımız var gibi hissediyoruz.”
+                    “With the Partner Plan, we literally just focus on making great products. Ekobol built our brand from scratch and our online sales have tripled. It feels like we have an entire digital marketing agency working for us.”
                 </blockquote>
                 <p class="mt-6 font-bold text-lg">Ayşe Yılmaz</p>
-                <p class="text-[var(--text-secondary-color)]">Kurucu, AY Tasarım</p>
+                <p class="text-[var(--text-secondary-color)]">Founder, AY Design</p>
             </div>
         </section>
 
          <!-- Final CTA Section -->
         <section class="px-4 sm:px-10 lg:px-20 py-20 lg:py-32 text-center">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-3xl md:text-4xl font-bold tracking-tight mb-6">Dijital İmparatorluğunuzu Kurmaya Hazır mısınız?</h2>
+            <div class="max-w-4xl mx-.comuto">
+                <h2 class="text-3xl md:text-4xl font-bold tracking-tight mb-6">Ready to Build Your Digital Empire?</h2>
                 <p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-2xl mx-auto mb-8">
-                  Platformlar arasında hokkabazlık yapmayı bırakın. Geleceğinizi inşa etmeye başlayın. Esnek planlarımızı keşfedin ve hedeflerinize en uygun olanı bulun.
+                  Stop juggling platforms. Start building your future. Explore our flexible plans and find the perfect fit for your ambition.
                 </p>
-                <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="signup.html">
-                    <span class="truncate">Bugün Ücretsiz Başlayın</span>
+                <a class="inline-flex min-w-[200px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" href="signup_en.html">
+                    <span class="truncate">Get Started For Free Today</span>
                 </a>
             </div>
         </section>
@@ -133,8 +133,26 @@
 </div>
 </div>
 
-<!-- Load our app script at the end of the body -->
-<script src="app.js"></script>
+<!-- Load English header/footer -->
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+    const headerPlaceholder = document.getElementById('header-placeholder');
+    if (headerPlaceholder) {
+        fetch('header_en.html')
+            .then(response => response.ok ? response.text() : Promise.reject('Header not found'))
+            .then(data => { headerPlaceholder.innerHTML = data; })
+            .catch(error => console.error('Error fetching header:', error));
+    }
+
+    const footerPlaceholder = document.getElementById('footer-placeholder');
+    if (footerPlaceholder) {
+        fetch('footer_en.html')
+            .then(response => response.ok ? response.text() : Promise.reject('Footer not found'))
+            .then(data => { footerPlaceholder.innerHTML = data; })
+            .catch(error => console.error('Error fetching footer:', error));
+    }
+});
+</script>
 
 </body>
 </html>
