--- a/resources.html
+++ b/resources.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Resources & Insights - Ekobol</title>
+    <title>Kaynaklar & İçgörüler - Ekobol</title>
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter:wght@400;500;700;900&family=Noto+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
@@ -16,29 +16,29 @@
     <div id="header-placeholder"></div>
     <main class="flex-1 px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
         <div class="max-w-5xl mx-auto text-center">
-            <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tighter leading-tight mb-6">Grow Smarter, Not Harder.</h1>
-            <p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-3xl mx-auto">Dive into our collection of resources designed to help you succeed in the ever-changing world of e-commerce.</p>
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tighter leading-tight mb-6">Daha Akıllıca Büyüyün, Daha Çok Değil.</h1>
+            <p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-3xl mx-auto">Sürekli değişen e-ticaret dünyasında başarılı olmanıza yardımcı olmak için tasarlanmış kaynak koleksiyonumuza dalın.</p>
         </div>
         <div class="mt-20 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
-                <h3 class="text-2xl font-bold mb-3">The Ekobol Blog</h3>
-                <p class="text-[var(--text-secondary-color)] mb-6">Stay updated with the latest e-commerce trends, AI strategies, and tips for multi-marketplace success.</p>
-                <a href="blog.html" class="font-bold text-[var(--primary-color)] hover:underline">Read Now →</a>
+                <h3 class="text-2xl font-bold mb-3">Ekobol Blog</h3>
+                <p class="text-[var(--text-secondary-color)] mb-6">En son e-ticaret trendleri, YZ stratejileri ve çoklu pazar yeri başarısı için ipuçları ile güncel kalın.</p>
+                <a href="blog.html" class="font-bold text-[var(--primary-color)] hover:underline">Şimdi Oku →</a>
             </div>
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
-                <h3 class="text-2xl font-bold mb-3">Success Stories</h3>
-                <p class="text-[var(--text-secondary-color)] mb-6">See how real businesses have scaled their operations and boosted revenue with Ekobol.</p>
-                <a href="success-stories.html" class="font-bold text-[var(--primary-color)] hover:underline">See the Results →</a>
+                <h3 class="text-2xl font-bold mb-3">Başarı Hikayeleri</h3>
+                <p class="text-[var(--text-secondary-color)] mb-6">Gerçek işletmelerin Ekobol ile operasyonlarını nasıl ölçeklendirdiğini ve gelirlerini nasıl artırdığını görün.</p>
+                <a href="success-stories.html" class="font-bold text-[var(--primary-color)] hover:underline">Sonuçları Gör →</a>
             </div>
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
-                <h3 class="text-2xl font-bold mb-3">Help Center & Docs</h3>
-                <p class="text-[var(--text-secondary-color)] mb-6">Find step-by-step guides, technical documentation, and answers to frequently asked questions.</p>
-                <a href="help-center.html" class="font-bold text-[var(--primary-color)] hover:underline">Get Support →</a>
+                <h3 class="text-2xl font-bold mb-3">Yardım Merkezi & Dokümanlar</h3>
+                <p class="text-[var(--text-secondary-color)] mb-6">Adım adım kılavuzlar, teknik belgeler ve sıkça sorulan soruların yanıtlarını bulun.</p>
+                <a href="help-center.html" class="font-bold text-[var(--primary-color)] hover:underline">Destek Al →</a>
             </div>
             <div class="border border-[var(--divider-color)] rounded-lg p-8 hover:shadow-xl hover:-translate-y-1 transition-all duration-300">
-                <h3 class="text-2xl font-bold mb-3">Webinars & Tutorials</h3>
-                <p class="text-[var(--text-secondary-color)] mb-6">Watch on-demand webinars and video tutorials to master Ekobol's features and advanced e-commerce strategies.</p>
-                <a href="#" class="font-bold text-[var(--primary-color)] hover:underline">Watch & Learn →</a>
+                <h3 class="text-2xl font-bold mb-3">Webinarlar & Eğitimler</h3>
+                <p class="text-[var(--text-secondary-color)] mb-6">Ekobol'ün özelliklerini ve gelişmiş e-ticaret stratejilerini öğrenmek için talep üzerine webinarları ve video eğitimlerini izleyin.</p>
+                <a href="#" class="font-bold text-[var(--primary-color)] hover:underline">İzle & Öğren →</a>
             </div>
         </div>
     </main>
