--- a/forgot-password_en.html
+++ b/forgot-password_en.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Şifre Sıfırla - Ekobol</title>
+    <title>Reset Password - Ekobol</title>
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter:wght@400;500;700;900&family=Noto+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
@@ -18,25 +18,25 @@
                 <svg class="h-10 w-10 text-[var(--primary-color)]" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><path d="M36.7273 44C33.9891 44 31.6043 39.8386 30.3636 33.69C29.123 39.8386 26.7382 44 24 44C21.2618 44 18.877 39.8386 17.6364 33.69C16.3957 39.8386 14.0109 44 11.2727 44C7.25611 44 4 35.0457 4 24C4 12.9543 7.25611 4 11.2727 4C14.0109 4 16.3957 8.16144 17.6364 14.31C18.877 8.16144 21.2618 4 24 4C26.7382 4 29.123 8.16144 30.3636 14.31C31.6043 8.16144 33.9891 4 36.7273 4C40.7439 4 44 12.9543 44 24C44 35.0457 40.7439 44 36.7273 44Z" fill="currentColor"></path></svg>
                 <span>Ekobol</span>
             </a>
-            <h1 class="mt-6 text-2xl font-bold tracking-tight md:text-3xl">Şifrenizi mi Unuttunuz?</h1>
-            <p class="mt-2 text-[var(--text-secondary-color)]">Sorun değil. E-posta adresinizi girin, size sıfırlama bağlantısı gönderelim.</p>
+            <h1 class="mt-6 text-2xl font-bold tracking-tight md:text-3xl">Forgot Your Password?</h1>
+            <p class="mt-2 text-[var(--text-secondary-color)]">No problem. Enter your email address and we'll send you a link to reset it.</p>
         </div>
         <div class="rounded-lg border border-[var(--divider-color)] bg-[var(--background-color)] p-8 shadow-sm">
             <form class="space-y-6">
                 <div>
-                    <label class="text-sm font-medium" for="email">E-posta adresi</label>
-                    <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="email" name="email" required="" type="email" placeholder="siz@ornek.com"/>
+                    <label class="text-sm font-medium" for="email">Email address</label>
+                    <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="email" name="email" required="" type="email" placeholder="you@example.com"/>
                 </div>
                 <div>
                     <button class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold" type="submit">
-                        Sıfırlama Bağlantısı Gönder
+                        Send Reset Link
                     </button>
                 </div>
             </form>
         </div>
         <p class="mt-8 text-center text-sm text-[var(--text-secondary-color)]">
-            Şifrenizi hatırladınız mı?
-            <a class="font-medium text-[var(--primary-color)] hover:underline" href="login.html">Buradan giriş yapın</a>
+            Remembered your password?
+            <a class="font-medium text-[var(--primary-color)] hover:underline" href="login.html">Log in here</a>
         </p>
     </div>
 </div>
