--- a/help-center.html
+++ b/help-center.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Help Center - Ekobol</title>
+    <title>Yardım Merkezi - Ekobol</title>
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
     <link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Inter:wght@400;500;700;900&family=Noto+Sans:wght@400;500;700;900" onload="this.rel='stylesheet'" rel="stylesheet"/>
     <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
@@ -17,27 +17,27 @@
     <main class="flex-1">
         <section class="bg-[var(--primary-color)] text-white py-20">
             <div class="max-w-4xl mx-auto text-center px-4">
-                <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter">How can we help?</h1>
+                <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter">Nasıl yardımcı olabiliriz?</h1>
                 <div class="mt-6 max-w-xl mx-auto">
-                    <input type="search" placeholder="Search for answers..." class="w-full h-14 px-6 rounded-full text-lg text-[var(--text-primary-color)] focus:ring-2 focus:ring-white"/>
+                    <input type="search" placeholder="Cevapları arayın..." class="w-full h-14 px-6 rounded-full text-lg text-[var(--text-primary-color)] focus:ring-2 focus:ring-white"/>
                 </div>
             </div>
         </section>
         <section class="px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
             <div class="max-w-7xl mx-auto">
-                 <h2 class="text-3xl font-bold text-center mb-12">Browse Help Topics</h2>
+                 <h2 class="text-3xl font-bold text-center mb-12">Yardım Konularına Göz Atın</h2>
                  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
-                        <h3 class="font-bold text-xl mb-4">Getting Started</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Connecting your first marketplace</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Setting up your profile</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Understanding the dashboard</li></ul>
+                        <h3 class="font-bold text-xl mb-4">Başlarken</h3>
+                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">İlk pazar yerinizi bağlama</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Profilinizi ayarlama</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Kontrol panelini anlama</li></ul>
                     </div>
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
-                        <h3 class="font-bold text-xl mb-4">AI Tools</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">How to use the Image Generator</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Best practices for AI descriptions</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Optimizing your pricing with AI</li></ul>
+                        <h3 class="font-bold text-xl mb-4">YZ Araçları</h3>
+                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Görüntü Oluşturucu nasıl kullanılır</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">YZ açıklamaları için en iyi pratikler</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">YZ ile fiyatlandırmanızı optimize etme</li></ul>
                     </div>
                     <div class="bg-white border border-[var(--divider-color)] p-8 rounded-lg">
-                        <h3 class="font-bold text-xl mb-4">Billing and Plans</h3>
-                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">How revenue sharing works</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Upgrading or downgrading your plan</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Viewing your invoices</li></ul>
+                        <h3 class="font-bold text-xl mb-4">Faturalandırma ve Planlar</h3>
+                        <ul class="space-y-3"><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Gelir paylaşımı nasıl çalışır</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Planınızı yükseltme veya düşürme</li><li class="text-[var(--text-secondary-color)] hover:text-[var(--primary-color)] cursor-pointer">Faturalarınızı görüntüleme</li></ul>
                     </div>
                  </div>
             </div>
