--- a/signup_en.html
+++ b/signup_en.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Kaydol - Ekobol</title>
+    <title>Sign Up - Ekobol</title>
     
     <!-- Fonts -->
     <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
@@ -28,33 +28,33 @@
     <main class="flex-1 flex items-center justify-center px-4 py-16 lg:py-24 bg-gray-50">
         <div class="w-full max-w-md">
             <div class="mb-8 text-center">
-                <h1 class="text-3xl font-bold tracking-tight md:text-4xl">Hesabınızı Oluşturun</h1>
-                <p class="mt-2 text-[var(--text-secondary-color)]">Bize katılın ve e-ticaret geleceğinizi inşa etmeye başlayın.</p>
+                <h1 class="text-3xl font-bold tracking-tight md:text-4xl">Create Your Account</h1>
+                <p class="mt-2 text-[var(--text-secondary-color)]">Join us and start building your e-commerce future.</p>
             </div>
             <div class="rounded-lg border border-[var(--divider-color)] bg-[var(--background-color)] p-8 shadow-sm">
                 <form class="space-y-6">
                      <div>
-                        <label class="text-sm font-medium" for="fullname">Tam Adınız</label>
-                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="fullname" name="fullname" required="" type="text" placeholder="örn. Ayşe Yılmaz"/>
+                        <label class="text-sm font-medium" for="fullname">Full Name</label>
+                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="fullname" name="fullname" required="" type="text" placeholder="e.g. Ayşe Yılmaz"/>
                     </div>
                     <div>
-                        <label class="text-sm font-medium" for="email">E-posta adresi</label>
-                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="email" name="email" required="" type="email" placeholder="siz@ornek.com"/>
+                        <label class="text-sm font-medium" for="email">Email address</label>
+                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="email" name="email" required="" type="email" placeholder="you@example.com"/>
                     </div>
                     <div>
-                        <label class="text-sm font-medium" for="password">Şifre</label>
-                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="password" name="password" required="" type="password" placeholder="Güçlü bir şifre oluşturun"/>
+                        <label class="text-sm font-medium" for="password">Password</label>
+                        <input class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-[var(--primary-color)] focus:ring-[var(--primary-color)]" id="password" name="password" required="" type="password" placeholder="Create a strong password"/>
                     </div>
                     <div class="pt-2">
                         <button class="flex w-full cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-[var(--primary-color)] text-white text-base font-bold leading-normal tracking-wide shadow-lg hover:shadow-xl transition-shadow duration-300" type="submit">
-                            Hesap Oluştur
+                            Create Account
                         </button>
                     </div>
                 </form>
             </div>
             <p class="mt-8 text-center text-sm text-[var(--text-secondary-color)]">
-                Zaten bir hesabınız var mı?
-                <a class="font-medium text-[var(--primary-color)] hover:underline" href="login.html">Giriş yapın</a>
+                Already have an account?
+                <a class="font-medium text-[var(--primary-color)] hover:underline" href="login.html">Log in</a>
             </p>
         </div>
     </main>
