--- a/resources.html
+++ b/resources.html
@@ -16,7 +16,7 @@
     <div id="header-placeholder"></div>
     <main class="flex-1 px-4 sm:px-10 lg:px-20 py-16 lg:py-24">
         <div class="max-w-5xl mx-auto text-center">
-            <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tighter leading-tight mb-6">Daha Akıllıca Büyüyün, Daha Çok Değil.</h1>
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tighter leading-tight mb-6">Hem Daha Çok Hem Daha Akıllıca Büyüyün.</h1>
             <p class="text-lg md:text-xl text-[var(--text-secondary-color)] max-w-3xl mx-auto">Sürekli değişen e-ticaret dünyasında başarılı olmanıza yardımcı olmak için tasarlanmış kaynak koleksiyonumuza dalın.</p>
         </div>
         <div class="mt-20 max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
